--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "webpack-cli": "^4.0.0"
   },
   "dependencies": {
-    "date-fns": "^2.16.1"
+    "date-fns": "^2.16.1",
+    "simplepicker": "^2.0.3"
   }
 }
